# pyklopp

./: .flake8  .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml
pyklopp/: __init__.py  __main__.py  __version__.py  defaults.py  importing.py  initializer.py  loading.py  metadata.py  util.py
pyklopp/console/: application.py
pyklopp/console/commands/: build.py  eval.py  init.py  pack.py  train.py
pyklopp/schema/: metadata-0.1.0.json
res/: approach.graphml
tests/: test_init.py  test_loading.py  test_pyklopp.py  test_train.py  test_util.py
tests/commands/: test_eval.py  test_init.py  test_pack.py  test_train.py
tests/metadata/: test_map_0_1.py  test_metadata.py  test_metadata_0_1.py  test_reader.py  test_scoped_map.py  test_util.py
