[tool.poetry]
name = "pyklopp"
version = "0.3.0"
description = ""
authors = [
    "Julian Stier <julian.stier@uni-passau.de>"
]
license = "MIT"

include = [
    "pyproject.toml",
    "README.md"
]

readme = "README.md"

homepage = "https://github.com/innvariant/pyklopp"
repository = "https://github.com/innvariant/pyklopp"
documentation = "https://github.com/innvariant/pyklopp"

keywords = ["machine learning", "inference", "training"]

[tool.poetry.dependencies]
python = "^3.6"
cleo = "^0.7"
torch = ">=1.3"
torchvision = ">=0.4"
pytorch-ignite = "^0.2"
tqdm = "^4.40"
importlib-metadata = "^1.5.0"
jsonschema = "^3.2.0"
importlib-resources = "^1.4.0"
semantic_version = "^2.8.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-mock = "^3.0.0"
pyfakefs = "^4.0.2"

[tool.poetry.scripts]
pyklopp = "pyklopp.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"